--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F9FAFB",
-  "theme_color": "#D97706",
+  "theme_color": "#000000",
   "orientation": "portrait-primary",
   "icons": [
     {
